BGDIINF_SB-1792: Migrate and reworked proxywms
The code has been migrated from
https://github.com/geoadmin/service-proxywms. The code has been a bit
reworked using some python 3.7 features and has been splitted in
severals module for a better code readability.

The wms config is now dynamically read from the DB during module import.
The wms config import code has also been migrated from
service-proxywms/scripts/import-restrictions.py.

In the wms config the timestamp is not anymore converted into a string,
but left as an array of timestamps.

wip

wip

wip

wip

wip
